feat(movie-backend): secure config, add validation, strengthen auth & booking ownership
- Move secrets to environment variables (application.yml -> env vars), add .env.example and ignore .env
- Add spring-boot-starter-validation and apply @Valid/@Not*/@Size/@Min/@Max annotations to DTOs and controller endpoints
- Extend LoginResponseDTO to include id and email; update AuthenticationService to return them
- Add GET /api/auth/me endpoint to return current authenticated user info
- Harden SecurityConfig: CORS whitelist, method-based role rules, stateless sessions
- Enforce authentication and role checks across booking, show, movie, theater controllers (@PreAuthorize)
- Update BookingService to use authenticated user, validate ownership for confirm/cancel, return my-bookings, and replace generic RuntimeExceptions with specific exceptions
- Improve error handling and add documentation (BACKEND_FIXES_SUMMARY.md, QUICKSTART.md)